Se arreglo el bug en donde habia problemas de compatibilad con firefox

--- a/CSS/escenario.css
+++ b/CSS/escenario.css
@@ -82,7 +82,7 @@ body {
 }
 
 .p_tags,#estrategia{
-  font-size: 16px;
+  font-size: 18px;
   /*text-decoration: line-through;*/
 }
 
@@ -134,6 +134,10 @@ top:100%;
   width: 50%;
   position: relative;
   overflow: hidden;
+}
+
+.no-events {
+  pointer-events: none;
 }
 
 #toolTip {
